users can now sign up

--- a/public/style.css
+++ b/public/style.css
@@ -42,7 +42,7 @@ body {
     color: white;
     height: 45px;
     width: 300px;
-    margin: 20px 0 0 0;
+    margin: 10px 0 10px 0;
     font-size: 20px;
     background-color: inherit;
     text-align: center;
